    configuration file)
  * stepconf: fix "following error" messages when the requested step rate
    cannot be attained
  * stepconf: fix "following error" messages due to insufficient "stepgen
    headroom"
  * stepconf: if an exception is encountered, show it to the user in a message
    box.
  * stepconf: fix non-working configuration if "Onscreen prompt for tool
    change" was disabled

 -- Jeff Epler <jepler@unpythonic.net>  Sat, 31 May 2008 10:50:37 -0500

emc2 (1:2.2.5) unstable; urgency=low

  * Include license statement for the 'Togl' software, which is incorporated
    in emc2
  * added m7i43_hm2, a driver for the Mesa 7i43 board with HostMot2
    firmware
  * axis: numeric keypad fix in prior version was incomplete
  * various documentation improvements
  * stepconf: do not allow axis acceleration to be set to zero during an axis
    test (SF#1938763)
  * last move no longer discarded if it's a G1 and the file ends with % (SF#1937281)
  * add a workaround which fixes pyvcp for hardy
  * backport fix for  #1929461 - halui stops reading inputs during a MDI
  * Fix a bug that caused backplot to freeze during linear moves
  * add serbian translation for AXIS/stepconf

 -- Jeff Epler <jepler@unpythonic.net>  Sun, 27 Apr 2008 14:39:40 -0500

emc2 (1:2.2.4) unstable; urgency=low

  * make xxxmach exit reliably with 'halcmd unload' (SF#1816781)
  * hook up encoder index for homing in the motenc sample configuration
  * axis: don't reset the interpreter during touch-off and reload.  This
    fixes the loss of modal settings from MDI, including tool length offset,
    fixing SF#1825638
  * stepconf: clarify that it is the ratio of teeth on each pulley that must
    be entered
  * hal_input: fix 'ZeroDivisionError' for absolute axes that report the same
    value for min and max
  * fix various inaccuracies in the documentation
  * halscope: fix the time displayed when mousing over a trace
  * axis: fix ctrl and - or = starting an unstoppable jog